# KujoGFX

./: .gitmodules  CMakeLists.txt  README.md  kujogfx.h
examples/01-clear/: 01_clear.cpp  01_clear.html  CMakeLists.txt  kujogfx_helper.h
examples/02-triangle/: 02_triangle.cpp  02_triangle.html  CMakeLists.txt  example_02_shader.inl
examples/03-triangle-color/: 03_triangle_color.cpp  03_triangle_color.html  CMakeLists.txt  example_03_shader.inl
examples/03-triangle-vertex/: 03_triangle_vertex.cpp  CMakeLists.txt
examples/04-quad/: 04_quad.cpp  04_quad.html  CMakeLists.txt  example_04_shader.inl
examples/05-buffer-offsets/: 05_buffer_offsets.cpp  05_buffer_offsets.html  CMakeLists.txt  example_05_shader.inl
examples/06-cube/: 06_cube.cpp  06_cube.html  CMakeLists.txt  example_06_shader.inl
examples/utils/: kujogfx_helper.h  kujomath.h
spirv_reflection/: CMakeLists.txt  spirv_reflection.cpp
spirv_test/: 02_fragment.fs  02_vertex.vs  CMakeLists.txt  fragment.fs  spirv_test.cpp  vertex.vs
utils/: kujoshdc.cpp  shader_logic.inl
